--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
 p{
-    color: black;
-    background-color: aqua;
-}
-body{
-    color: green;
-    background-color: red;
+    color: red;
+    background-color: #fff;
 }
